--- a/css/style-propio.css
+++ b/css/style-propio.css
@@ -26,8 +26,19 @@ body {
     justify-content: center;
     width: 100%;
 }
-#segmento {
-    display: flex;   
+.video-responsive {
+	height: 0;
+	overflow: hidden;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	position: relative;
+}
+.video-responsive iframe, .video-responsive object, .video-responsive embed {
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
 }
 .ninio__description {
     color: white;
@@ -36,7 +47,38 @@ body {
 }
 
 footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
+
+/* RESPONSIVE NINIO*/
+@media screen and (min-width: 1024px) {
+    #principal {
+        display: flex;
+        max-height: min-content;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .ninio__description {
+        display: flex;
+        flex-flow: column wrap;
+        max-width: 100%;   
+        max-height: 100%;
+    }
+    .video-responsive {
+        min-width: 760px;
+    }
+    .video-responsive iframe, .video-responsive object, .video-responsive embed {
+        height: 50%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }footer {
+        position: static;
+        bottom: 0;
+        width: 100%;
+    }
+}
+
