incluyendo-grilla-bootstrap

--- a/css/style-propio.css
+++ b/css/style-propio.css
@@ -96,6 +96,23 @@ footer img {
     max-height: none;
 }
 
+.conteiner-fluid {
+    margin-top: 0;
+}
+.row {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+.col-sm-2 img {
+    max-width: 100%;
+    max-height: none;
+}
+.col-sm-2 img:hover {
+    filter: grayscale(100%);
+    transform: scale(1.2);
+}
+
 
 
 
