--- a/sass/_@media.scss
+++ b/sass/_@media.scss
@@ -23,3 +23,13 @@
         justify-content: baseline;
     }
 }
+
+//LA LOOPERA BAILABLE RESPONSIVE//
+/* LA LOOPERA BAILABLE RESPONSIVE*/
+/* LA LOOPERA RESPONSIVE */
+@media screen and (min-width: 1024px) {
+    .pie {
+        display: contents;
+        justify-content: baseline;
+    }
+}
