--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -2,11 +2,10 @@
 /*VARS*/
 @import "index";
 @import "ninio";
+@import "lalooperabailable";
 @import "vars";
 @import "@media";
 @import "animaciones";
-
-
 
 
 
