--- a/sass/_lalooperabailable.scss
+++ b/sass/_lalooperabailable.scss
@@ -12,6 +12,10 @@
         font-size: large;
     }
 }
+.grid-item img:hover {
+    filter: grayscale(100%);
+    transform: scale(1.1);
+}
 
 .segmento {
     text-align: center;
