--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -3,6 +3,7 @@
 @import "index";
 @import "ninio";
 @import "lalooperabailable";
+@import "troupe";
 @import "vars";
 @import "@media";
 @import "animaciones";
