--- a/css/mi-estilo.css
+++ b/css/mi-estilo.css
@@ -32,13 +32,19 @@
     grid-row: 5/9;
 }
 .grid-item:nth-child(4) {
-    grid-column: 1/7;
+    grid-column: 1/5;
     grid-row: 9/13;
 }
 .grid-item:nth-child(5) {
-    grid-column: 7/13;
+    grid-column: 5/9;
     grid-row: 9/13;
 }
+.grid-item:nth-child(6) {
+    grid-column: 9/13;
+    grid-row: 9/13;
+}
+
+
 
 
 
