--- a/sass/_@media.scss
+++ b/sass/_@media.scss
@@ -25,7 +25,7 @@
 }
 
 //LA LOOPERA BAILABLE RESPONSIVE//
-/* LA LOOPERA BAILABLE RESPONSIVE*/
+
 /* LA LOOPERA RESPONSIVE */
 @media screen and (min-width: 1024px) {
     .pie {
@@ -52,4 +52,7 @@
         margin: 20px auto;
     }
 }
-    
+
+// TU PROYECTO //
+/* TU PROYECTO */
+
