--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -4,6 +4,7 @@
 @import "ninio";
 @import "lalooperabailable";
 @import "troupe";
+@import "tu-proyecto";
 @import "vars";
 @import "@media";
 @import "animaciones";
